@@ -1,3 +1,10 @@
+2014-01-13  Niels Möller  <nisse@lysator.liu.se>
+
+	* nettle-types.h (union nettle_block16): New type, replacing union
+	gcm_block.
+	* gcm.h (union gcm_block): Deleted. Replaced by nettle_block16.
+	* gcm.c: Replaced all use of gcm_block by nettle_block16.
+
 2014-01-04  Niels Möller  <nisse@lysator.liu.se>
 
 	* config.guess: Updated to 2014-01-01 version, from
